--- a/BeautySalonService/BeautySalonService.csproj
+++ b/BeautySalonService/BeautySalonService.csproj
@@ -812,6 +812,7 @@
     <Content Include="Assets\popper.js\packages\tooltip\yarn.lock" />
     <Content Include="Assets\popper.js\README.md" />
     <Content Include="Assets\popper.js\yarn.lock" />
+    <Content Include="Areas\AdminPart\Views\CMSPerson\Index.cshtml" />
     <EntityDeploy Include="Areas\AdminPart\Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -819,7 +820,6 @@
     <Content Include="Areas\AdminPart\Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\AdminPart\Views\CMSPerson\Index.cshtml" />
     <None Include="Properties\PublishProfiles\aa.pubxml" />
     <None Include="Properties\PublishProfiles\dd.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -1614,6 +1614,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Areas\AdminPart\Models\EmailModel.cs" />
+    <Compile Include="Areas\AdminPart\Models\ImportSalon.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\AdminPart\Models\Message.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
